--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="lala">Lala</string>
     <string name="ctt_kepulangan">catatan kepulangan kamu :</string>
     <string name="keluar">Keluar</string>
+    <string name="title_activity_home_guru2">HomeGuru2Activity</string>
 </resources>
